--- a/rocklov/Gemfile
+++ b/rocklov/Gemfile
@@ -2,6 +2,7 @@
 
 source "https://rubygems.org"
 
+gem 'allure-cucumber', '2.14.3'
 gem 'cucumber', '~> 6.1'
 gem 'capybara', '3.35.3'
 gem 'selenium-webdriver', '3.142.7'
