Implementado funcionalidade da validação de remoção de equipamento

--- a/rocklov/web/Gemfile
+++ b/rocklov/web/Gemfile
@@ -1,6 +1,6 @@
 # frozen_string_literal: true
 
-source "https://rubygems.org"
+source "http://rubygems.org"
 
 gem 'allure-cucumber', '2.14.3'
 gem 'cucumber', '~> 6.1'
@@ -9,3 +9,4 @@ gem 'selenium-webdriver', '3.142.7'
 gem 'rspec', '3.10'
 gem 'faker', '2.18'
 gem 'mongo', '2.14'
+gem 'httparty', '0.18.1'
